; ModuleID = '/home/carl/AnghaBench/tig/src/extr_display.c_create_or_move_display_separator.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_display.c_create_or_move_display_separator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@display_sep = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [34 x i8] c"Failed to create separator window\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @create_or_move_display_separator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @create_or_move_display_separator(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i64, i64* @display_sep, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %16, label %7

7:                                                ; preds = %2
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i64 @newwin(i32 %8, i32 1, i32 0, i32 %9)
  store i64 %10, i64* @display_sep, align 8
  %11 = load i64, i64* @display_sep, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %15, label %13

13:                                               ; preds = %7
  %14 = call i32 @die(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %7
  br label %23

16:                                               ; preds = %2
  %17 = load i64, i64* @display_sep, align 8
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @wresize(i64 %17, i32 %18, i32 1)
  %20 = load i64, i64* @display_sep, align 8
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @mvwin(i64 %20, i32 0, i32 %21)
  br label %23

23:                                               ; preds = %16, %15
  ret void
}

declare dso_local i64 @newwin(i32, i32, i32, i32) #1

declare dso_local i32 @die(i8*) #1

declare dso_local i32 @wresize(i64, i32, i32) #1

declare dso_local i32 @mvwin(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
